--- a/app/src/main/res/layout/activity_vovmedia_streaming.xml
+++ b/app/src/main/res/layout/activity_vovmedia_streaming.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".VOVMediaStreamingActivity">
 
     <com.google.android.exoplayer2.ui.PlayerControlView
         android:id="@+id/VOVMediaPlayer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        app:show_timeout="0"
+        android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
